[project]
name = "tram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.26.0",
    "black>=25.1.0",
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "transformers[torch]>=4.51.3",
]
